[gd_scene load_steps=17 format=2]

[ext_resource path="res://Quadrocopter_v3.gd" type="Script" id=1]
[ext_resource path="res://addons/smoothing/smoothing.gd" type="Script" id=2]
[ext_resource path="res://vismat_motors.tres" type="Material" id=3]
[ext_resource path="res://ChaseCamera.gd" type="Script" id=4]
[ext_resource path="res://DJI_Spark_Drone.tscn" type="PackedScene" id=5]
[ext_resource path="res://sounds/whine.ogg" type="AudioStream" id=6]

[sub_resource type="CylinderMesh" id=1]
top_radius = 0.2
bottom_radius = 0.2
height = 0.03

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.3, 0.1, 0.5 )

[sub_resource type="SphereMesh" id=3]
radius = 0.1
height = 0.2
radial_segments = 4
rings = 1

[sub_resource type="PhysicsMaterial" id=4]
bounce = 0.3

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.232413, 0.137293, 0.406826 )

[sub_resource type="CylinderShape" id=6]
radius = 0.3
height = 0.05

[sub_resource type="SphereMesh" id=7]
resource_local_to_scene = true
radius = 0.05
height = 0.5
radial_segments = 4
rings = 1
is_hemisphere = true

[sub_resource type="SphereMesh" id=8]
resource_local_to_scene = true
radius = 0.05
height = 0.5
radial_segments = 4
rings = 1
is_hemisphere = true

[sub_resource type="SphereMesh" id=9]
resource_local_to_scene = true
radius = 0.05
height = 0.5
radial_segments = 4
rings = 1
is_hemisphere = true

[sub_resource type="SphereMesh" id=10]
resource_local_to_scene = true
radius = 0.05
height = 0.5
radial_segments = 4
rings = 1
is_hemisphere = true

[node name="Quadrocopter" type="Spatial"]

[node name="Smoothing" type="Spatial" parent="."]
transform = Transform( 1, 1.49012e-08, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script = ExtResource( 2 )
target = NodePath("../../Quadrocopter/Quadrocopter")

[node name="DJI_Spark_Drone" parent="Smoothing" instance=ExtResource( 5 )]
transform = Transform( 0.005, 0, 0, 0, 0.005, 0, 0, 0, 0.005, 0, 0, 0 )

[node name="Rotors" type="Spatial" parent="Smoothing"]
visible = false

[node name="FL" type="MeshInstance" parent="Smoothing/Rotors"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0, 0.4 )
mesh = SubResource( 1 )
material/0 = null

[node name="FR" type="MeshInstance" parent="Smoothing/Rotors"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 0, 0.4 )
mesh = SubResource( 1 )
material/0 = null

[node name="BL" type="MeshInstance" parent="Smoothing/Rotors"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0, -0.4 )
mesh = SubResource( 1 )
material/0 = null

[node name="BR" type="MeshInstance" parent="Smoothing/Rotors"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 0, -0.4 )
mesh = SubResource( 1 )
material/0 = null

[node name="Body" type="MeshInstance" parent="Smoothing"]
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="cammount" type="Spatial" parent="Smoothing"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.76643e-09, 0.319869, 0 )

[node name="cammount" type="SpringArm" parent="Smoothing/cammount"]
transform = Transform( -1, -1.62921e-07, 2.82187e-07, 0, 0.866025, 0.5, -3.25841e-07, 0.5, -0.866025, -4.13504e-09, 0.277497, -0.743858 )
collision_mask = 3
spring_length = 3.0
margin = 1.0

[node name="campoint" type="Spatial" parent="Smoothing/cammount/cammount"]
transform = Transform( 1, -7.10543e-15, 2.84217e-14, 0, 0.984808, -0.173648, 0, 0.173648, 0.984808, -9.77524e-07, 0.232051, 3.59808 )

[node name="MeshInstance" type="MeshInstance" parent="Smoothing/cammount/cammount"]
visible = false
mesh = SubResource( 3 )
material/0 = null

[node name="Quadrocopter" type="RigidBody" parent="."]
transform = Transform( 1, 1.49012e-08, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
physics_material_override = SubResource( 4 )
linear_damp = 0.2
angular_damp = 0.2
script = ExtResource( 1 )

[node name="GroundIRSensor" type="RayCast" parent="Quadrocopter"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.48509e-09, 0.23388, 0.56479 )
enabled = true
cast_to = Vector3( 0, -10, 0 )

[node name="BodyCollision" type="CollisionShape" parent="Quadrocopter"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.91188e-09, 0.128304, 0 )
shape = SubResource( 5 )

[node name="MotorSound" type="AudioStreamPlayer3D" parent="Quadrocopter"]
transform = Transform( 1, -1.49012e-08, 0, 0, 1, 0, 0, 0, 1, 0.34, 0.266143, 0.34 )
stream = ExtResource( 6 )
unit_size = 10.0
pitch_scale = 0.1
autoplay = true
doppler_tracking = 1

[node name="FLCollision" type="CollisionShape" parent="Quadrocopter"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.34, 0.266143, 0.34 )
shape = SubResource( 6 )

[node name="Visualizer" type="MeshInstance" parent="Quadrocopter/FLCollision"]
visible = false
mesh = SubResource( 7 )
material/0 = ExtResource( 3 )

[node name="FRCollision" type="CollisionShape" parent="Quadrocopter"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.34, 0.266143, 0.34 )
shape = SubResource( 6 )

[node name="Visualizer" type="MeshInstance" parent="Quadrocopter/FRCollision"]
visible = false
mesh = SubResource( 8 )
material/0 = ExtResource( 3 )

[node name="BLCollision" type="CollisionShape" parent="Quadrocopter"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.34, 0.266143, -0.34 )
shape = SubResource( 6 )

[node name="Visualizer" type="MeshInstance" parent="Quadrocopter/BLCollision"]
visible = false
mesh = SubResource( 9 )
material/0 = ExtResource( 3 )

[node name="BRCollision" type="CollisionShape" parent="Quadrocopter"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.34, 0.266143, -0.34 )
shape = SubResource( 6 )

[node name="Visualizer" type="MeshInstance" parent="Quadrocopter/BRCollision"]
visible = false
mesh = SubResource( 10 )
material/0 = ExtResource( 3 )

[node name="Debug" type="Control" parent="Quadrocopter"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Motor" type="Label" parent="Quadrocopter/Debug"]
margin_right = 137.0
margin_bottom = 26.0
text = "Motor: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accelerometer" type="Label" parent="Quadrocopter/Debug"]
margin_left = 240.0
margin_top = 2.0
margin_right = 795.0
margin_bottom = 16.0
text = "Accel: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accelerometer2" type="Label" parent="Quadrocopter/Debug"]
margin_left = 240.0
margin_top = 19.0
margin_right = 795.0
margin_bottom = 33.0
text = "Accel: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accelerometer3" type="Label" parent="Quadrocopter/Debug"]
margin_left = 241.0
margin_top = 35.0
margin_right = 796.0
margin_bottom = 49.0
text = "Accel: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GroundIR" type="Label" parent="Quadrocopter/Debug"]
margin_left = 1.0
margin_top = 16.0
margin_right = 138.0
margin_bottom = 42.0
text = "Motor: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GrabCast" type="RayCast" parent="Quadrocopter"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.66119e-09, 0.0774808, 0.00399283 )
enabled = true
exclude_parent = false
cast_to = Vector3( 0, -0.2, 0 )
collide_with_areas = true

[node name="PinJoint" type="Generic6DOFJoint" parent="Quadrocopter"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.98084e-10, -0.0267145, 0 )
collision/exclude_nodes = false

[node name="InterpolatedCamera" type="InterpolatedCamera" parent="."]
doppler_tracking = 1
current = true
fov = 60.0
far = 2000.0
target = NodePath("../Smoothing/cammount/cammount/campoint")
speed = 5.0
enabled = true
script = ExtResource( 4 )
